--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -5,7 +5,7 @@
                         {% if site.facebook %}<a class="social-btn" href="http://facebook.com/{{ site.facebook }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-facebook-square"></i></a>{% endif %}
                         {% if site.google.plus %}<a class="social-btn" href="http://plus.google.com/+{{ site.google.plus }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-google-plus-square"></i></a>{% endif %}
                         {% if site.linkedin %}<a class="social-btn" href="http://linkedin.com/in/{{ site.linkedin }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin-square"></i></a>{% endif %}
-                        {% if site.tistory %}<a class="social-btn" href="http://{{ site.tistory }}.tistory.com/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin-square"></i></a>{% endif %}
+                        {% if site.tistory %}<a class="social-btn" href="http://{{ site.tistory }}.tistory.com/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-tree"></i></a>{% endif %}
                         {% if site.xing %}<a class="social-btn" href="http://www.xing.com/profile/{{ site.xing }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-xing-square"></i></a>{% endif %}
                         {% if site.instagram %}<a class="social-btn" href="http://instagram.com/{{ site.instagram }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-instagram"></i></a>{% endif %}
                         {% if site.tumblr %}<a class="social-btn" href="http://{{ site.tumblr }}.tumblr.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-tumblr-square"></i></a>{% endif %}
