--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,6 +36,11 @@
                     <li>
                         <a href="http://{{ site.tistory }}.tistory.com/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin-square"></i> Tistory</a>
                     </li>{% endif %}
+
+                    {% if site.naver %}
+                    <li>
+                        <a href="http://blog.naver.com/{{ site.naver }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin-square"></i> Tistory</a>
+                    </li>{% endif %}
                     {% if site.xing %}
                     <li>
                         <a href="http://www.xing.com/profile/{{ site.xing }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-xing-square"></i> Xing</a>
