--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -39,7 +39,7 @@
 
                     {% if site.naver %}
                     <li>
-                        <a href="http://blog.naver.com/{{ site.naver }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin-square"></i> Tistory</a>
+                        <a href="http://blog.naver.com/{{ site.naver }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-blogger"></i> Tistory</a>
                     </li>{% endif %}
                     {% if site.xing %}
                     <li>
